--- a/lab4/Makefile
+++ b/lab4/Makefile
@@ -21,6 +21,16 @@ tracegen: tracegen.c trans.o cachelab.c
 trans.o: trans.c
 	$(CC) $(CFLAGS) -O0 -c trans.c
 
+test: csim
+	# ./csim -s 1 -E 1 -b 1 -t traces/yi2.trace
+	# ./csim -s 4 -E 2 -b 4 -t traces/yi.trace
+	# ./csim -s 2 -E 1 -b 4 -t traces/dave.trace
+	# ./csim -s 2 -E 1 -b 3 -t traces/trans.trace
+	./csim -s 2 -E 2 -b 3 -t traces/trans.trace
+	./csim -s 2 -E 4 -b 3 -t traces/trans.trace
+	# ./csim -s 5 -E 1 -b 5 -t traces/trans.trace
+	# ./csim -s 5 -E 1 -b 5 -t traces/long.trace
+
 #
 # Clean the src dirctory
 #
